2008-08-09  Alexander Fehr  <pizzapunk gmail com>

  * transmission-cli-1.32-1:
  New upstream release.

2008-08-07  Alexander Fehr  <pizzapunk gmail com>

  * transmission-cli-1.31-1:
  New upstream release.
  Replaced transmission-remote -q with kill in init script.
  Removed install message on upgrade.

2008-07-20  Alexander Fehr  <pizzapunk gmail com>

  * transmission-cli-1.22-1:
  New upstream release.
  Renamed from transmission to transmission-cli.
  New maintainer.
  Split out GTK+ GUI into transmission-gtk.
  Changed url.
  Added make dependency on intltool.
  Cleaned up init script.
  Cleaned up install file.

2008-01-07  Varun Acharya  <varun@archlinux.org>

  * transmission-1.00-1:
  Adopted and moved to extra.

2007-06-26  Alessio 'mOLOk' Bolognino  <themolok@gmail.com>

  * transmission-0.72-4:
  I had to use gentoo's sources because the tarball provided by the official site is broken.
  transmission-{daemon,remote} are back.

2007-06-19  Alessio 'mOLOk' Bolognino  <themolok@gmail.com>

  * transmission-0.72-3:
  Rebuild against libevent-1.3b.