@@ -1,3 +1,8 @@
+2008-08-23  Alexander Fehr  <pizzapunk gmail com>
+
+  * transmission-cli-1.33-1:
+  New upstream release.
+
 2008-08-09  Alexander Fehr  <pizzapunk gmail com>
 
   * transmission-cli-1.32-1:
